force-app/main/default/objects/accessnow__ACNW_Data_Audit_Log__c/fields/accessnow__Date__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>