force-app/main/default/objects/accessnow__ACNW_Data_Audit_Log__c/fields/accessnow__Field__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>