force-app/main/default/objects/accessnow__ACNW_Data_Audit_Log__c/fields/accessnow__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>