force-app/main/default/objects/accessnow__ACNW_Data_Audit_Log__c/fields/accessnow__Old_Value__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Old_Value__c</fullName>
    <label>Old Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>