force-app/main/default/objects/accessnow__ACNW_Data_Audit_Log__c/fields/accessnow__Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>