force-app/main/default/objects/accessnow__ACNW_Data_Audit_Log__c/fields/accessnow__Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Parent_Name__c</fullName>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>