force-app/main/default/objects/accessnow__ACNW_Data_Audit_Log__c/fields/accessnow__Request__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Request__c</fullName>
    <label>Request</label>
    <referenceTo>accessnow__ACNW_Request__c</referenceTo>
    <relationshipLabel>Data Audit Logs</relationshipLabel>
    <relationshipName>Data_Audit_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>