force-app/main/default/objects/accessnow__ACNW_Data_Audit_Log__c/listViews/accessnow__All.listView-meta.xml
<ListView>
    <fullName>accessnow__All</fullName>
    <columns>accessnow__Object_Name__c</columns>
    <columns>accessnow__Field__c</columns>
    <columns>accessnow__Old_Value__c</columns>
    <columns>accessnow__New_Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>